test/errors/scope-resolution/redefinition/redefinition-formal.chpl
module T3 {
  proc f(x: int, x)
  {
  }
  f(1,2);
}
