test/errors/scope-resolution/redefinition/redefinition-formal.1.good
redefinition-formal.chpl:2: In function 'f':
redefinition-formal.chpl:2: error: 'x' has multiple definitions
redefinition-formal.chpl:2: note: redefined here
